# tetris

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg-configuration.json  vcpkg.json
assets/: assets.rc
include/: audioHandler.h  board.h  colors.h  game.h  grid.h  inputHandler.h  position.h  tetromino.h  userInterface.h  utils.h
src/: audioHandler.cpp  board.cpp  colors.cpp  game.cpp  grid.cpp  inputHandler.cpp  main.cpp  position.cpp  tetromino.cpp  tetrominoes.cpp  userInterface.cpp  utils.cpp
tests/: CMakeLists.txt  board_test.cpp  game_integration_test.cpp  grid_test.cpp  tetromino_test.cpp
